--- a/src/components/GmailDashboard.module.css
+++ b/src/components/GmailDashboard.module.css
@@ -1,80 +1,109 @@
-.sidepanel {
-  width: 40px;
-  height: 100%;
-  /* background-color: #f0f0f0; */
-  background: radial-gradient( #39d6d3, #042434);
-  position: fixed;
-  left: 0;
-  top: 0;
-  overflow-y: auto;
-}
-
-.sidepanel ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidepanel li {
-  margin-bottom: 10px;
-}
-
-.sidepanel li button {
-  border: none;
-  background: none;
-  cursor: pointer;
-}
-
-.sidepanel li button img {
-  margin-top: 14px;
-  width: 20px;
-  height: 20px;
-}
-/* GmailDashboard.module.css */
 .dashboard {
-  display: flex; 
-  flex-direction: column;
-  align-items: center;
-  margin-left: 40px; 
+  padding-left: 70px;
+  display: flex;
+  height: 100vh;
   font-family: 'Open Sans', sans-serif;
 }
 
-.title {
-  margin-bottom: 20px;
+.sidebar {
+  padding-left: 60px;
+  width: 240px;
+  background-color: #ffffff;
+  border-right: 1px solid #e0e0e0;
+  padding: 1rem;
+  overflow-y: auto;
 }
 
+.emailListSection {
+  flex: 1;
+  overflow-y: auto;
+  border-right: 1px solid #e0e0e0;
+}
+
+.emailContentSection {
+  flex: 2;
+  overflow-y: auto;
+  padding: 1rem;
+}
+
+.sidebarSection {
+  margin-bottom: 15px;
+}
+
+.sidebarTitle {
+  font-weight: bold;
+  padding: 10px;
+  color: #555;
+}
+
+.sidebar button {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  text-align: left;
+  border: none;
+  background-color: #f3f9f9;
+  cursor: pointer;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.sidebar button:hover {
+  background-color: #e8eaed;
+}
+
+.sidebar button.active {
+  background-color: #deedee;
+}
+
+
+.content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.messagePreview, .messageSelected {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  transition: box-shadow 0.2s;
+  background-color: #FFFFFF; /* or any other color you prefer */
+}
+.messagePreview:hover, .messageSelected:hover {
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+.messageSelected {
+  background-color: #deedee;
+}
 .splitView {
   display: flex;
   width: 100%;
 }
 
 .messageList {
+  padding-left: 100px;
   width: 35%;
   padding-right: 20px;
 }
 
-.messageSelected {
-  background-color: #042434; 
-}
-.messagePreview {
-  padding: 10px;
-  border: 1px solid #e0e0e0;
-  margin-bottom: 10px;
-  cursor: pointer;
-  background-color: rgba(57, 214, 211, 0.2); 
-  transition: background-color 0.3s;
-}
+
 
 .senderName {
   font-weight: bold;
+  color: #333;
 }
 
 .messageTime {
-  color: #777;
+  color: #666;
   font-size: 0.8em;
 }
 
 .messageSnippet {
-  color: #555;
+  color: #666;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -85,29 +114,53 @@
   border: 1px solid #e0e0e0;
   padding: 10px;
   min-height: 200px; 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
+}
+.messageInfo {
+  flex-grow: 1;
 }
 
 .messageSubject {
+  color: #666;
   text-align: left;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 4px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .messageFrom {
+  font-size: 5em;
   color: #999;
   margin-bottom: 4px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .messageDate {
   text-align: right;
   color: #ccc;
   margin-bottom: 10px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 .messageBody {
   color: #333;
+}
+
+.filterOptions {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.filterOptions button {
+  padding: 10px 20px;
+  margin: 0 5px;
+  border: none;
+  background-color: #f1f3f4;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.filterOptions button:hover, .filterOptions button.active {
+  background-color: #e8eaed;
 }
