--- a/src/components/TimeTracker.css
+++ b/src/components/TimeTracker.css
@@ -12,6 +12,7 @@
 
 .time-tracker-container {
   /* padding-left: 1 rem; */
+  transform: translate(2%, 0%);
   display: grid;
   grid-template-columns: 1fr 2fr; /* Ratio between progress ring and chart */
   gap: 0.5frem; /* Space between ring and chart */
