--- a/src/components/TimeTracker.css
+++ b/src/components/TimeTracker.css
@@ -2,7 +2,7 @@
 .timer {
   position: relative;
 
-  height: 430px;
+  height: 90%;
   justify-content: center; 
   align-items: center; /* Center vertically */
 }
@@ -16,7 +16,7 @@
   padding: 2rem;
   background: linear-gradient(135deg, #E2EFF1 0%, #EFF8FB 100%);
   margin: 30px auto;
-  max-width: 1200px; /* Adjust max-width as needed */
+  max-width: 90%; /* Adjust max-width as needed */
 }
 
 .progress-container {
@@ -124,6 +124,7 @@ button:active {
   transition: stroke-dashoffset 0.5s linear;
 }
 
+
 .timer-button {
   background-color: #39d6d3;
   color: white;
@@ -144,3 +145,10 @@ button:active {
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
+button.active {
+  background-color: #b2d8d8; /* New color for active (selected) button */
+}
+
+/* button:hover, button.active:hover {
+  background-color: #eaf3f3; */
+/* } */
