--- a/src/components/SignUpPage.css
+++ b/src/components/SignUpPage.css
@@ -38,7 +38,7 @@
 .signup-header p {
     color: #1b1919;
     font-size: 1.1em;
-    font-family: 'Inknut Antiqua', serif;
+    font-family: 'Manrope', serif;
     height: 35em;
     margin-top: 0;
     margin-bottom: 0;
@@ -52,6 +52,8 @@
 }
 
 .signup-form h2 {
+    margin-left:14%;
+    /* align-items: center; */
     margin-bottom: 0.5em;
     font-family: 'Overpass', sans-serif;
     font-size: 2.5em;
@@ -59,7 +61,7 @@
 }
 
 .form-group {
-    margin-bottom: 1em;
+    margin-bottom: 0.075em;
 }
 
 .form-group label {
@@ -75,7 +77,7 @@
     padding: 0.75em;
     border: 1px solid #0c0c0c;
     border-radius: 100px;
-
+    margin-top: 0%;
     font-size: 1em;
     font-family: 'Nunito', sans-serif; /* Same font family as other inputs */
     background-color: white;
@@ -95,7 +97,8 @@
 
 .sign-up-button {
     width: 100%;
-    padding: 0.75em;
+    margin-top: 1.5em;
+    padding: 1.25em;
     border-radius: 100px;
     background-color: #39d6d3;
     border: none;
@@ -114,7 +117,7 @@
     color: #726f6f;
     font-size: 1em;
     margin-top: -1.5em;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
 }
 
 .sign-in a {
